--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,6 +33,10 @@ android {
     kotlinOptions {
         jvmTarget = '11'
     }
+
+    buildFeatures{
+        viewBinding = true
+    }
     dynamicFeatures = [':favorite']
 }
 
@@ -43,6 +47,7 @@ dependencies {
     implementation libs.material
     implementation(libs.androidx.activity.ktx)
     implementation libs.androidx.constraintlayout
+    implementation libs.androidx.activity
     testImplementation libs.junit
     androidTestImplementation libs.androidx.junit
     androidTestImplementation libs.androidx.espresso.core
