--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,18 +42,14 @@ android {
 
 dependencies {
 
-    implementation libs.androidx.core.ktx
-    implementation libs.androidx.appcompat
-    implementation libs.material
-    implementation(libs.androidx.activity.ktx)
-    implementation libs.androidx.constraintlayout
-    implementation libs.androidx.activity
-    testImplementation libs.junit
-    androidTestImplementation libs.androidx.junit
-    androidTestImplementation libs.androidx.espresso.core
     implementation project(":core")
-    implementation(libs.feature.delivery.ktx)
+    implementation(libs.androidx.activity.ktx)
+    implementation(libs.androidx.fragment.ktx)
+    implementation libs.androidx.appcompat
+    implementation libs.feature.delivery.ktx
+    implementation libs.material
 
     implementation(libs.hilt.android)
+    implementation libs.androidx.constraintlayout
     ksp(libs.hilt.android.compiler)
 }
