--- a/core/build.gradle
+++ b/core/build.gradle
@@ -3,7 +3,7 @@ plugins {
     alias(libs.plugins.kotlin.android)
     alias(libs.plugins.ksp)
     id("kotlin-parcelize")
-    alias(libs.plugins.hiltAndroid)
+//    alias(libs.plugins.hiltAndroid)
 }
 
 android {
@@ -38,9 +38,6 @@ dependencies {
     implementation libs.androidx.appcompat
     implementation libs.material
     implementation libs.androidx.constraintlayout
-    testImplementation libs.junit
-    androidTestImplementation libs.androidx.junit
-    androidTestImplementation libs.androidx.espresso.core
 
     implementation(libs.room.runtime)
     ksp(libs.room.compiler)
